--- a/testCSM/templates/Client.html
+++ b/testCSM/templates/Client.html
@@ -55,7 +55,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Name" class="form-label">Name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Name0" id="Name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  required>
+                <input type="text" class="form-control" name="ClientName0" id="Name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  required>
                 
             </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Surname" class="form-label">Surname</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Surname0" id="Surname" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                <input type="text" class="form-control" name="ClientSurname0" id="Surname" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
                 
             </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Age" class="form-label">Age</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Age0" id="Age" aria-describedby="addonyrs"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                <input type="text" class="form-control" name="ClientAge0" id="Age" aria-describedby="addonyrs"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
                 
                 <span class="input-group-text" id="addonyrs">yrs</span>
                 
@@ -93,7 +93,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="uid" class="form-label">uid</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="uid0" id="uid" aria-describedby="addon"  {% if data is defined %}  value="{{data[3]}}" {%endif%}  >
+                <input type="text" class="form-control" name="Clientuid0" id="uid" aria-describedby="addon"  {% if data is defined %}  value="{{data[3]}}" {%endif%}  >
                 
             </div>
         </div>
