--- a/testCSM/templates/order.html
+++ b/testCSM/templates/order.html
@@ -55,7 +55,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="name" class="form-label">name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="name0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                <input type="text" class="form-control" name="ordername0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
                 
             </div>
         </div>
@@ -71,10 +71,14 @@
         
         
         
+        
+        
+        
+        
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="name" class="form-label">name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="name0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                <input type="text" class="form-control" name="Productsname0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
                 
             </div>
         </div>
@@ -86,14 +90,10 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="count" class="form-label">count</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="count0" id="count" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                <input type="text" class="form-control" name="Productscount0" id="count" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
                 
             </div>
         </div>
-        
-        
-        
-        
         
         
         
