--- a/testCSM/templates/superSecret.html
+++ b/testCSM/templates/superSecret.html
@@ -55,7 +55,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Secret" class="form-label">Secret</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Secret0" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                <input type="text" class="form-control" name="superSecretSecret0" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
                 
             </div>
         </div>
