--- a/templates/tableInputTemplate.html
+++ b/templates/tableInputTemplate.html
@@ -8,7 +8,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="{{field.name}}" class="form-label">{{field.displayName}}</label>
             <div class="input-group">
-                <input type="{{field.htmlType}}" class="form-control" name="{{field.name}}0" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{data[' + loop.index0|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data is defined %}  value="{{data[' + loop.index0|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
+                <input type="{{field.htmlType}}" class="form-control" name="{{data.name}}{{field.name}}0" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{data[' + loop.index0|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data is defined %}  value="{{data[' + loop.index0|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
                 {%if field.unit != ''%}
                 <span class="input-group-text" id="addon{{field.unit}}">{{field.unit}}</span>
                 {%endif%}
