--- a/testCSM/templates/Product.html
+++ b/testCSM/templates/Product.html
@@ -55,7 +55,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="rowid" class="form-label">Client</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="rowid0" id="rowid" aria-describedby="addon"  readonly value="{%if rowid is defined %}{{rowid}}{%else%}{{data[0]}}{%endif%}" required>
+                <input type="text" class="form-control" name="Productrowid0" id="rowid" aria-describedby="addon"  readonly value="{%if rowid is defined %}{{rowid}}{%else%}{{data[0]}}{%endif%}" required>
                 
             </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Price" class="form-label">Price</label>
             <div class="input-group">
-                <input type="number" class="form-control" name="Price0" id="Price" aria-describedby="addon$"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                <input type="number" class="form-control" name="ProductPrice0" id="Price" aria-describedby="addon$"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
                 
                 <span class="input-group-text" id="addon$">$</span>
                 
@@ -81,7 +81,7 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Product name" class="form-label">Product name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Product name0" id="Product name" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                <input type="text" class="form-control" name="ProductProduct name0" id="Product name" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
                 
             </div>
         </div>
