--- a/testCSM/templates/Products.html
+++ b/testCSM/templates/Products.html
@@ -72,6 +72,8 @@
     </thead>
     <tbody>
         {%for item in ProductRows%}
+        {%set Productrow = item[0]%}
+        
             <tr name="row">
                 
                     
@@ -98,6 +100,7 @@
                 </td>
                 
             </tr>
+        
         {%endfor%}
     </tbody>
 </table>
