--- a/testCSM/templates/secretPage.html
+++ b/testCSM/templates/secretPage.html
@@ -66,6 +66,8 @@
     </thead>
     <tbody>
         {%for item in superSecretRows%}
+        {%set superSecretrow = item[0]%}
+        
             <tr name="row">
                 
                     
@@ -80,6 +82,7 @@
                 </td>
                 
             </tr>
+        
         {%endfor%}
     </tbody>
 </table>
