--- a/templates/tableTemplate.html
+++ b/templates/tableTemplate.html
@@ -17,6 +17,10 @@
     </thead>
     <tbody>
         {{'{%for item in ' + data.name + 'Rows%}'}}
+        {{'{%set ' + data.name + 'row = item[0]%}'}}
+        {%if data.primary.referencedTable is defined%}
+        {{'{%if ' + data.primary.referencedTable.name +'row == item[0]%}'}}
+        {%endif%}
             <tr name="row">
                 {%for thisField in data.fields%}
                     {%if isField(thisField)%}
@@ -39,6 +43,9 @@
                 </td>
                 {%endif%}
             </tr>
+        {%if data.primary.referencedTable is defined%}
+        {{'{%endif%}'}}
+        {%endif%}
         {{'{%endfor%}'}}
     </tbody>
 </table>
