--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -78,6 +78,8 @@
     </thead>
     <tbody>
         {%for item in ClientRows%}
+        {%set Clientrow = item[0]%}
+        
             <tr name="row">
                 
                     
@@ -114,6 +116,7 @@
                 </td>
                 
             </tr>
+        
         {%endfor%}
     </tbody>
 </table>
