--- a/templates/tableInputTemplate.html
+++ b/templates/tableInputTemplate.html
@@ -1,19 +1,60 @@
 <b>Create a new {{data.name}} element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    {%set count = namespace(value=1) %}
+    {#Weird scoping issue forced me to use this, 
+        and an even weirder issue with loop variable and jinja recursion forced me to abandon the said variable#}
+    {%if showBtn%}
+    {{'{%if data' + data.name + ' is undefined or data' + data.name + '|length==0%}'}}
     <div class="row" name="{{data.name}}row0">
-        <input type="hidden" style="display:none;" name="{{data.name}}rowid0" value="{{ '{{' + data.name + 'rowid0}}' }}">
+        <input type="hidden" style="display:none;" name="{{data.name}}rowid-0" value="">
         {%for field in data.fields%}
         {%if isField(field)%}
         {%if not field.hidden %}
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="{{field.name}}" class="form-label">{{field.displayName}}</label>
             <div class="input-group">
-                <input type="{{field.htmlType}}" class="form-control" name="{{data.name}}{{field.name}}0" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{data[' + loop.index0|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data is defined %}  value="{{data[' + loop.index0|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
+                {%if showBtn%}
+                <input type="{{field.htmlType}}" class="form-control" name="{{data.name}}{{field.name}}-0" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{row[' + getIndexWhereName(field.name, data.fields)|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data' + data.name + ' is defined %}  value="{{row[' + getIndexWhereName(field.name, data.fields)|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
+                {%endif%}
                 {%if field.unit != ''%}
                 <span class="input-group-text" id="addon{{field.unit}}">{{field.unit}}</span>
                 {%endif%}
             </div>
         </div>
+        {% set count.value = count.value + 1 %}
+        {%endif%}
+        {%else%}
+        <br>
+        {{renderTableInput(field, True)}}
+        {%endif%}
+        {%endfor%}
+    </div>
+    {{'{%else%}'}}
+    {{'{%for row in data' + data.name + '%}'}}
+    {%endif%}
+    <div class="row" name="{{data.name}}row0">
+        {%if showBtn%}
+        <input type="hidden" style="display:none;" name="{{data.name}}rowid-{{'{{loop.index0}}'}}" value="{{ '{{row[0]}}' }}">
+        {%else%}
+        <input type="hidden" style="display:none;" name="{{data.name}}rowid-0" value="{{ '{{data' + data.name + '[0] if data' + data.name + ' is defined}}' }}">
+        {%endif%}
+        {%for field in data.fields%}
+        {%if isField(field)%}
+        {%if not field.hidden %}
+        <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+            <label for="{{field.name}}" class="form-label">{{field.displayName}}</label>
+            <div class="input-group">
+                {%if showBtn%}
+                <input type="{{field.htmlType}}" class="form-control" name="{{data.name}}{{field.name}}-{{'{{loop.index0}}'}}" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{row[' + getIndexWhereName(field.name, data.fields)|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data' + data.name + ' is defined %}  value="{{row[' + getIndexWhereName(field.name, data.fields)|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
+                {%else%}
+                <input type="{{field.htmlType}}" class="form-control" name="{{data.name}}{{field.name}}-0" id="{{field.name}}" aria-describedby="addon{{field.unit}}" {% if field.name==data.parentName %} readonly value="{{ '{%if ' + field.name + ' is defined %}{{' + field.name + '}}{%else%}{{data' + data.name + '[' + count.value|string + ']}}{%endif%}' }}"{%else%}{{ ' {% if data' + data.name + ' is defined %}  value="{{data' + data.name + '[' + count.value|string + ']}}" {%endif%}' }} {%endif%} {%if field.required%}required{%endif%}>
+                {%endif%}
+                {%if field.unit != ''%}
+                <span class="input-group-text" id="addon{{field.unit}}">{{field.unit}}</span>
+                {%endif%}
+            </div>
+        </div>
+        {% set count.value = count.value + 1 %}
         {%endif%}
         {%else%}
         <br>
@@ -22,6 +63,8 @@
         {%endfor%}
     </div>
     {%if showBtn%}
-    <button type="button" class="btn btn-secondary btn-sm" nextRow="1" onclick="newRow(this, '{{data.name}}')">Add new row</button>
+    {{'{%endfor%}'}}
+    {{'{%endif%}'}}
+    <button type="button" class="btn btn-secondary btn-sm" nextRow="{{'{{data' + data.name + '|length}}'}}" onclick="newRow(this, '{{data.name}}')">Add new row</button>
     {%endif%}
 </div>
