--- a/testCSM/templates/Client.html
+++ b/testCSM/templates/Client.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+        <script src="{{ url_for('static',filename='newRow.js') }}"></script>
     </head>
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
@@ -45,20 +46,29 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/new/Client/submit" method="post">
+                        <input type="hidden" style="display:none;" name="Clientrowid-0" value="{{Clientrowid}}">
                         <b>Create a new Client element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    
+    
+    
     <div class="row" name="Clientrow0">
-        <input type="hidden" style="display:none;" name="Clientrowid0" value="{{Clientrowid0}}">
+        
+        <input type="hidden" style="display:none;" name="Clientrowid-0" value="{{dataClient[0] if dataClient is defined}}">
+        
         
         
         
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Name" class="form-label">Name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="ClientName0" id="Name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  required>
+                
+                <input type="text" class="form-control" name="ClientName-0" id="Name" aria-describedby="addon"  {% if dataClient is defined %}  value="{{dataClient[1]}}" {%endif%}  required>
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -67,7 +77,9 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Surname" class="form-label">Surname</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="ClientSurname0" id="Surname" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="ClientSurname-0" id="Surname" aria-describedby="addon"  {% if dataClient is defined %}  value="{{dataClient[2]}}" {%endif%}  >
+                
                 
             </div>
         </div>
@@ -76,10 +88,13 @@
         
         
         
+        
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Age" class="form-label">Age</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="ClientAge0" id="Age" aria-describedby="addonyrs"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="ClientAge-0" id="Age" aria-describedby="addonyrs"  {% if dataClient is defined %}  value="{{dataClient[3]}}" {%endif%}  >
+                
                 
                 <span class="input-group-text" id="addonyrs">yrs</span>
                 
@@ -90,13 +105,17 @@
         
         
         
+        
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="uid" class="form-label">uid</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Clientuid0" id="uid" aria-describedby="addon"  {% if data is defined %}  value="{{data[3]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="Clientuid-0" id="uid" aria-describedby="addon"  {% if dataClient is defined %}  value="{{dataClient[4]}}" {%endif%}  >
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -113,22 +132,4 @@
             
         </footer>
     </body>
-    <script>
-        function newRow(el, dataName){
-            var inputSet = el.parentElement;
-            nextRowId = el.getAttribute("nextRow");
-            el.setAttribute("nextRow", nextRowId + 1);
-            row0 = document.getElementsByName(dataName + "row0")[0];
-            rowN = row0.cloneNode(true);
-            rowN.setAttribute("name", nextRowId)
-            for(child of rowN.children){
-                if(child.classList.contains("mb-3")){
-                    input = child.children[1].children[0];
-                    input.name = input.name.replace(/.$/, nextRowId);
-                }
-            }
-            rowN.children[0].name = rowN.children[0].name.replace(/.$/, nextRowId);
-            inputSet.insertBefore(rowN, el);
-        }
-    </script>
 </html>
