--- a/testCSM/templates/Product.html
+++ b/testCSM/templates/Product.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+        <script src="{{ url_for('static',filename='newRow.js') }}"></script>
     </head>
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
@@ -45,17 +46,25 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/new/Product/submit" method="post">
+                        <input type="hidden" style="display:none;" name="Productrowid-0" value="{{Productrowid}}">
                         <b>Create a new Product element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    
+    
+    
     <div class="row" name="Productrow0">
-        <input type="hidden" style="display:none;" name="Productrowid0" value="{{Productrowid0}}">
+        
+        <input type="hidden" style="display:none;" name="Productrowid-0" value="{{dataProduct[0] if dataProduct is defined}}">
+        
         
         
         
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="rowid" class="form-label">Client</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Productrowid0" id="rowid" aria-describedby="addon"  readonly value="{%if rowid is defined %}{{rowid}}{%else%}{{data[0]}}{%endif%}" required>
+                
+                <input type="text" class="form-control" name="Productrowid-0" id="rowid" aria-describedby="addon"  readonly value="{%if rowid is defined %}{{rowid}}{%else%}{{dataProduct[1]}}{%endif%}" required>
+                
                 
             </div>
         </div>
@@ -64,10 +73,13 @@
         
         
         
+        
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Price" class="form-label">Price</label>
             <div class="input-group">
-                <input type="number" class="form-control" name="ProductPrice0" id="Price" aria-describedby="addon$"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                
+                <input type="number" class="form-control" name="ProductPrice-0" id="Price" aria-describedby="addon$"  {% if dataProduct is defined %}  value="{{dataProduct[2]}}" {%endif%}  >
+                
                 
                 <span class="input-group-text" id="addon$">$</span>
                 
@@ -78,13 +90,17 @@
         
         
         
+        
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Product name" class="form-label">Product name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="ProductProduct name0" id="Product name" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="ProductProduct name-0" id="Product name" aria-describedby="addon"  {% if dataProduct is defined %}  value="{{dataProduct[3]}}" {%endif%}  >
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -101,22 +117,4 @@
             
         </footer>
     </body>
-    <script>
-        function newRow(el, dataName){
-            var inputSet = el.parentElement;
-            nextRowId = el.getAttribute("nextRow");
-            el.setAttribute("nextRow", nextRowId + 1);
-            row0 = document.getElementsByName(dataName + "row0")[0];
-            rowN = row0.cloneNode(true);
-            rowN.setAttribute("name", nextRowId)
-            for(child of rowN.children){
-                if(child.classList.contains("mb-3")){
-                    input = child.children[1].children[0];
-                    input.name = input.name.replace(/.$/, nextRowId);
-                }
-            }
-            rowN.children[0].name = rowN.children[0].name.replace(/.$/, nextRowId);
-            inputSet.insertBefore(rowN, el);
-        }
-    </script>
 </html>
