--- a/testCSM/templates/Products.html
+++ b/testCSM/templates/Products.html
@@ -9,9 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
-        <style>
-            
-        </style>
+        <script src="{{ url_for('static',filename='filtr.js') }}"></script>
     </head>
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
@@ -111,25 +109,4 @@
             
         </footer>
     </body>
-    <script>
-        document.addEventListener("DOMContentLoaded", function(event) { 
-            var scrollpos = localStorage.getItem('scrollpos');
-            if (scrollpos) window.scrollTo(0, scrollpos);    
-        });
-    
-        window.onbeforeunload = function(e) {
-            localStorage.setItem('scrollpos', window.scrollY);
-        };
-        function filtr(filtr, type){
-            var cells = document.getElementsByName(type)
-            cells.forEach(element => {
-                if(element.innerHTML.toLowerCase().includes(filtr.toLowerCase())){
-                    element.parentElement.className = ""
-                }
-                else{
-                    element.parentElement.className = "d-none"
-                }
-            });
-        }
-    </script>
 </html>
