--- a/testCSM/templates/order.html
+++ b/testCSM/templates/order.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+        <script src="{{ url_for('static',filename='newRow.js') }}"></script>
     </head>
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
@@ -45,20 +46,29 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/new/order/submit" method="post">
+                        <input type="hidden" style="display:none;" name="orderrowid-0" value="{{orderrowid}}">
                         <b>Create a new order element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    
+    
+    
     <div class="row" name="orderrow0">
-        <input type="hidden" style="display:none;" name="orderrowid0" value="{{orderrowid0}}">
+        
+        <input type="hidden" style="display:none;" name="orderrowid-0" value="{{dataorder[0] if dataorder is defined}}">
+        
         
         
         
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="name" class="form-label">name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="ordername0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="ordername-0" id="name" aria-describedby="addon"  {% if dataorder is defined %}  value="{{dataorder[1]}}" {%endif%}  >
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -66,8 +76,12 @@
         <br>
         <b>Create a new Products element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    
+    
+    
+    {%if dataProducts is undefined or dataProducts|length==0%}
     <div class="row" name="Productsrow0">
-        <input type="hidden" style="display:none;" name="Productsrowid0" value="{{Productsrowid0}}">
+        <input type="hidden" style="display:none;" name="Productsrowid-0" value="">
         
         
         
@@ -78,10 +92,13 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="name" class="form-label">name</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Productsname0" id="name" aria-describedby="addon"  {% if data is defined %}  value="{{data[1]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="Productsname-0" id="name" aria-describedby="addon"  {% if dataProducts is defined %}  value="{{row[2]}}" {%endif%}  >
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -90,16 +107,64 @@
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="count" class="form-label">count</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="Productscount0" id="count" aria-describedby="addon"  {% if data is defined %}  value="{{data[2]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="Productscount-0" id="count" aria-describedby="addon"  {% if dataProducts is defined %}  value="{{row[3]}}" {%endif%}  >
+                
                 
             </div>
         </div>
         
         
         
+        
+    </div>
+    {%else%}
+    {%for row in dataProducts%}
+    
+    <div class="row" name="Productsrow0">
+        
+        <input type="hidden" style="display:none;" name="Productsrowid-{{loop.index0}}" value="{{row[0]}}">
+        
+        
+        
+        
+        
+        
+        
+        
+        <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+            <label for="name" class="form-label">name</label>
+            <div class="input-group">
+                
+                <input type="text" class="form-control" name="Productsname-{{loop.index0}}" id="name" aria-describedby="addon"  {% if dataProducts is defined %}  value="{{row[2]}}" {%endif%}  >
+                
+                
+            </div>
+        </div>
+        
+        
+        
+        
+        
+        
+        <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
+            <label for="count" class="form-label">count</label>
+            <div class="input-group">
+                
+                <input type="text" class="form-control" name="Productscount-{{loop.index0}}" id="count" aria-describedby="addon"  {% if dataProducts is defined %}  value="{{row[3]}}" {%endif%}  >
+                
+                
+            </div>
+        </div>
+        
+        
+        
+        
     </div>
     
-    <button type="button" class="btn btn-secondary btn-sm" nextRow="1" onclick="newRow(this, 'Products')">Add new row</button>
+    {%endfor%}
+    {%endif%}
+    <button type="button" class="btn btn-secondary btn-sm" nextRow="{{dataProducts|length}}" onclick="newRow(this, 'Products')">Add new row</button>
     
 </div>
         
@@ -117,22 +182,4 @@
             
         </footer>
     </body>
-    <script>
-        function newRow(el, dataName){
-            var inputSet = el.parentElement;
-            nextRowId = el.getAttribute("nextRow");
-            el.setAttribute("nextRow", nextRowId + 1);
-            row0 = document.getElementsByName(dataName + "row0")[0];
-            rowN = row0.cloneNode(true);
-            rowN.setAttribute("name", nextRowId)
-            for(child of rowN.children){
-                if(child.classList.contains("mb-3")){
-                    input = child.children[1].children[0];
-                    input.name = input.name.replace(/.$/, nextRowId);
-                }
-            }
-            rowN.children[0].name = rowN.children[0].name.replace(/.$/, nextRowId);
-            inputSet.insertBefore(rowN, el);
-        }
-    </script>
 </html>
