--- a/testCSM/templates/superSecret.html
+++ b/testCSM/templates/superSecret.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+        <script src="{{ url_for('static',filename='newRow.js') }}"></script>
     </head>
     <body>
         <header class="d-flex flex-column flex-md-row sticky-top align-items-center px-md-4 mb-3 bg-body border-bottom shadow-sm">
@@ -45,20 +46,29 @@
             <div class="card">
                 <div class="card-body">
                     <form action="/new/superSecret/submit" method="post">
+                        <input type="hidden" style="display:none;" name="superSecretrowid-0" value="{{superSecretrowid}}">
                         <b>Create a new superSecret element</b>
 <div name="inputSet" style="margin-left:1%; padding-bottom:5px">
+    
+    
+    
     <div class="row" name="superSecretrow0">
-        <input type="hidden" style="display:none;" name="superSecretrowid0" value="{{superSecretrowid0}}">
+        
+        <input type="hidden" style="display:none;" name="superSecretrowid-0" value="{{datasuperSecret[0] if datasuperSecret is defined}}">
+        
         
         
         
         <div class="mb-3" style="display: inline-block; width:auto; min-width:33%">
             <label for="Secret" class="form-label">Secret</label>
             <div class="input-group">
-                <input type="text" class="form-control" name="superSecretSecret0" id="Secret" aria-describedby="addon"  {% if data is defined %}  value="{{data[0]}}" {%endif%}  >
+                
+                <input type="text" class="form-control" name="superSecretSecret-0" id="Secret" aria-describedby="addon"  {% if datasuperSecret is defined %}  value="{{datasuperSecret[1]}}" {%endif%}  >
+                
                 
             </div>
         </div>
+        
         
         
         
@@ -75,22 +85,4 @@
             
         </footer>
     </body>
-    <script>
-        function newRow(el, dataName){
-            var inputSet = el.parentElement;
-            nextRowId = el.getAttribute("nextRow");
-            el.setAttribute("nextRow", nextRowId + 1);
-            row0 = document.getElementsByName(dataName + "row0")[0];
-            rowN = row0.cloneNode(true);
-            rowN.setAttribute("name", nextRowId)
-            for(child of rowN.children){
-                if(child.classList.contains("mb-3")){
-                    input = child.children[1].children[0];
-                    input.name = input.name.replace(/.$/, nextRowId);
-                }
-            }
-            rowN.children[0].name = rowN.children[0].name.replace(/.$/, nextRowId);
-            inputSet.insertBefore(rowN, el);
-        }
-    </script>
 </html>
