--- a/testCSM/templates/Clients.html
+++ b/testCSM/templates/Clients.html
@@ -108,7 +108,7 @@
                 <td><a href="/edit/Client/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
                     
                         
-                        <a href="/new/Product/{{item[0]}}" class="btn btn-success" style="width:100%;">New Product</a>
+                        <a href="/new/Product/{{item[None]}}" class="btn btn-success" style="width:100%;">New Product</a>
                         
                     
                 </td>
