--- a/testCSM/templates/Orders.html
+++ b/testCSM/templates/Orders.html
@@ -131,7 +131,11 @@
                     
                 
                 
-                <td><a href="/edit/order/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> <form action="/copy/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
+                <td>
+                    <a href="/edit/order/{{item[0]}}" class="btn btn-warning" style="width:100%;">Edit</a> 
+                    
+                    <form action="/copy/order/{{item[0]}}" method="post"><button type="submit" class="btn btn-info" style="width:100%;">Copy</button></form>
+                    
                     
                 </td>
                 
